omo i've fixed all the colors and then the homepage text

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
-/********** Template CSS **********/
+/********** template CSS **********/
 :root {
-    --primary: #06A3DA;
+    --primary: green;
     --secondary: #34AD54;
     --light: #EEF9FF;
-    --dark: #091E3E;
+    --dark: #093e1f;
 }
 
 
@@ -11,7 +11,7 @@
 .spinner {
     width: 40px;
     height: 40px;
-    background: var(--primary);
+    background: green;
     margin: 100px auto;
     -webkit-animation: sk-rotateplane 1.2s infinite ease-in-out;
     animation: sk-rotateplane 1.2s infinite ease-in-out;
@@ -77,6 +77,20 @@ h6,
     font-weight: 600 !important;
 }
 
+/* TOLU */
+.text-uppercase{
+    color: green;
+}
+.text-uppercase:hover{
+    color: black;
+}
+.text-primary {
+    color: green!important;
+}
+.border-primary{
+    border-color: green!important;
+    
+}
 
 /*** Button ***/
 .btn {
@@ -89,10 +103,20 @@ h6,
 .btn-secondary {
     color: #FFFFFF;
     box-shadow: inset 0 0 0 50px transparent;
+    background-color: green!important;
+    border-color: green!important;
+}
+/* TOLU */
+.btn-dark{
+    background-color: rgb(6, 46, 6);
+}
+.btn-dark:hover{
+    background-color: green
+
 }
 
 .btn-primary:hover {
-    box-shadow: inset 0 0 0 0 var(--primary);
+    box-shadow: inset 0 0 0 0 rgb(6, 46, 6);
 }
 
 .btn-secondary:hover {
@@ -143,7 +167,7 @@ h6,
 
 .navbar-dark .navbar-nav .nav-link:hover,
 .navbar-dark .navbar-nav .nav-link.active {
-    color: var(--primary);
+    color: green;
 }
 
 .navbar-dark .navbar-brand h1 {
@@ -151,8 +175,8 @@ h6,
 }
 
 .navbar-dark .navbar-toggler {
-    color: var(--primary) !important;
-    border-color: var(--primary) !important;
+    color: green !important;
+    border-color: green !important;
 }
 
 @media (max-width: 991.98px) {
@@ -169,7 +193,7 @@ h6,
     }
 
     .navbar-dark .navbar-brand h1 {
-        color: var(--primary);
+        color:green;
     }
 }
 
@@ -195,7 +219,7 @@ h6,
         height: 2px;
         bottom: -1px;
         left: 50%;
-        background: var(--primary);
+        background: green;
         transition: .5s;
     }
 
@@ -210,7 +234,7 @@ h6,
     }
 
     .sticky-top.navbar-dark .navbar-brand h1 {
-        color: var(--primary);
+        color: green;
     }
 }
 
@@ -221,7 +245,8 @@ h6,
     left: 0;
     right: 0;
     bottom: 0;
-    background: rgba(9, 30, 62, .7);
+    background: linear-gradient(rgba(3, 46, 19, 0.7), rgba(9, 30, 62, .7)), url(../img/carousel-1.jpg) center center no-repeat;
+    background-size: cover;
     z-index: 1;
 }
 
@@ -257,7 +282,7 @@ h6,
     height: 5px;
     left: 0;
     bottom: 0;
-    background: var(--primary);
+    background: green;
     border-radius: 2px;
 }
 
@@ -325,7 +350,7 @@ h6,
     display: flex;
     align-items: center;
     justify-content: center;
-    background: var(--primary);
+    background: green;
     border-radius: 2px;
     transform: rotate(-45deg);
 }
@@ -370,7 +395,7 @@ h6,
 
 .testimonial-carousel .owl-dot.active {
     width: 30px;
-    background: var(--primary);
+    background: green;
 }
 
 .testimonial-carousel .owl-item.center {
@@ -473,8 +498,17 @@ h6,
 }
 
 .bg-header {
-    background: linear-gradient(rgba(9, 30, 62, .7), rgba(9, 30, 62, .7)), url(../img/carousel-1.jpg) center center no-repeat;
+    background: linear-gradient(rgba(3, 46, 19, 0.7), rgba(9, 30, 62, .7)), url(../img/carousel-1.jpg) center center no-repeat;
     background-size: cover;
+}
+
+/*  TOLU */
+.bg-primary {
+    background-color: green!important;
+}
+
+.bg-dark {
+    background-color: rgb(2, 46, 2)!important;
 }
 
 .link-animated a {
